--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@tinymce/tinymce-vue": "^3.2.8",
     "axios": "0.27.2",
     "clipboard": "^2.0.11",
-    "codemirror": "^5.49.2",
-    "connect": "3.6.6",
+    "codemirror": "^5.65.3",
+    "connect": "3.7.0",
     "core-js": "^2.6.12",
     "downloadjs": "^1.4.7",
     "echarts": "^4.9.0",
@@ -47,17 +47,17 @@
     "element-ui": "^2.15.8",
     "file-saver": "1.3.8",
     "fuse.js": "3.4.4",
-    "js-beautify": "^1.10.2",
+    "js-beautify": "^1.14.3",
     "js-cookie": "2.2.0",
     "jsencrypt": "^3.0.0-rc.1",
-    "jszip": "3.1.5",
-    "mavon-editor": "^2.9.0",
+    "jszip": "^3.9.1",
+    "mavon-editor": "^2.10.4",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "qs": "^6.10.3",
-    "screenfull": "4.2.0",
-    "sortablejs": "1.8.4",
+    "screenfull": "4.2.1",
+    "sortablejs": "1.15.0",
     "tinymce": "^5.8.2",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
@@ -67,7 +67,7 @@
     "vue-image-crop-upload": "^2.5.0",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.6",
-    "vuedraggable": "2.20.0",
+    "vuedraggable": "2.24.3",
     "vuex": "3.1.0",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.14.1"
