--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/remember-5/eladmin-plus-web/issues"
   },
   "dependencies": {
-    "@riophae/vue-treeselect": "0.4.0",
+    "@riophae/vue-treeselect": "^0.4.0",
     "@tinymce/tinymce-vue": "^3.2.8",
     "axios": "0.27.2",
     "clipboard": "^2.0.11",
@@ -59,8 +59,8 @@
     "screenfull": "4.2.1",
     "sortablejs": "1.15.0",
     "tinymce": "^5.8.2",
-    "vue": "2.6.10",
-    "vue-count-to": "1.0.13",
+    "vue": "^2.6.14",
+    "vue-count-to": "^1.0.13",
     "vue-cropper": "0.5.8",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-highlightjs": "^1.3.3",
@@ -69,11 +69,10 @@
     "vue-splitpane": "1.0.6",
     "vuedraggable": "2.24.3",
     "vuex": "3.1.0",
-    "wangeditor": "^3.1.1",
-    "xlsx": "^0.14.1"
+    "wangeditor": "^4.7.15",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
     "@babel/parser": "^7.7.4",
     "@babel/register": "7.0.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.2.1",
@@ -98,15 +97,15 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "plop": "2.3.0",
-    "runjs": "^4.3.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.1",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10"
+    "tasksfile": "^5.1.1",
+    "vue-template-compiler": "^2.6.14"
   },
   "engines": {
     "node": ">=8.9",
