--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 ENV = 'development'
 
 # 接口地址
-VUE_APP_BASE_API  = 'http://localhost:8000'
+VUE_APP_BASE_API  = 'http://eladmin.remember5.top/api'
 VUE_APP_WS_API = 'ws://localhost:58080'
 
 # 是否启用 babel-plugin-dynamic-import-node插件
