--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "clipboard": "^2.0.11",
     "codemirror": "^5.65.3",
     "connect": "3.7.0",
-    "core-js": "^2.6.12",
+    "core-js": "3.22.5",
     "downloadjs": "^1.4.7",
     "echarts": "^4.9.0",
     "echarts-gl": "^1.1.2",
@@ -76,28 +76,28 @@
     "@babel/parser": "^7.7.4",
     "@babel/register": "7.0.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.2.1",
-    "@vue/cli-plugin-babel": "3.5.3",
-    "@vue/cli-plugin-eslint": "^3.9.1",
-    "@vue/cli-plugin-unit-jest": "3.5.3",
-    "@vue/cli-service": "3.5.3",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "^4.5.17",
+    "@vue/cli-plugin-eslint": "^4.5.17",
+    "@vue/cli-plugin-unit-jest": "^4.5.17",
+    "@vue/cli-service": "^4.5.17",
+    "@vue/test-utils": "^1.3.0",
     "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "23.6.0",
-    "babel-plugin-dynamic-import-node": "2.3.0",
+    "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chalk": "2.4.2",
-    "chokidar": "2.1.5",
-    "connect": "3.6.6",
-    "eslint": "5.15.3",
-    "eslint-plugin-vue": "5.2.2",
+    "chokidar": "^2.1.8",
+    "connect": "^3.6.6",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "plop": "2.3.0",
-    "sass": "^1.32.13",
+    "sass": "^1.39.2",
     "sass-loader": "^10.2.1",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
