--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
     "serve-static": "^1.13.2",
-    "svg-sprite-loader": "4.1.3",
-    "svgo": "1.2.0",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo": "^1.3.2",
     "tasksfile": "^5.1.1",
     "vue-template-compiler": "^2.6.14"
   },
