publicpath提取到配置文件

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,9 @@ ENV = 'development'
 VUE_APP_BASE_API  = 'http://127.0.0.1:8000'
 VUE_APP_WS_API = 'ws://localhost:58080'
 
+# 配置打包的publicPath地址
+VUE_APP_PUBLIC_PATH = '/'
+
 # 是否启用websocket
 ENABLE_WEBSOCKET = false
 
