--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,9 @@ VUE_APP_BASE_API  = 'http://eladmin.remember5.top/api'
 # 如果接口是 http 形式， wss 需要改为 ws
 VUE_APP_WS_API = 'ws://eladmin.remember5.top:58080'
 
+# 配置打包的publicPath地址
+VUE_APP_PUBLIC_PATH = '/'
+
 # 是否启用websocket
 ENABLE_WEBSOCKET = false
 
