--- a/.env.staging
+++ b/.env.staging
@@ -9,6 +9,9 @@ VUE_APP_BASE_API  = 'http://localhost:8000'
 # 如果接口是 http 形式， wss 需要改为 ws
 VUE_APP_WS_API = 'ws://localhost:58080'
 
+# 配置打包的publicPath地址
+VUE_APP_PUBLIC_PATH = '/'
+
 # 是否启用websocket
 ENABLE_WEBSOCKET = false
 
