修改为mybatis-plus版本

--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
     "@tinymce/tinymce-vue": "^3.2.8",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "0.27.2",
     "clipboard": "^2.0.11",
     "codemirror": "^5.65.3",
     "connect": "3.7.0",
-    "core-js": "3.22.5",
+    "core-js": "3.35.0",
     "downloadjs": "^1.4.7",
     "echarts": "^4.9.0",
     "echarts-gl": "^1.1.2",
